--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,1 @@
-const apiClient = axios.create({
-    baseURL: import.meta.env.VITE_API_URL,
-    withCredentials: false,
-})
+VITE_API_URL=https://seven13-day05-events-edit.onrender.com
