--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ SUPABASE_OUTPUT_URL=https://wdnniifioffggoxjtbzw.supabase.co/storage/v1/object/p
 SUPABASE_BUCKET_NAME=images
 UPLOAD_DIR=uploads
 PORT=3000
-VITE_API_URL=http://localhost:3000
+VITE_API_URL=https://seven13-day05-events-edit.onrender.com
 
 
 # This was inserted by `prisma init`:
@@ -20,3 +20,4 @@ VITE_API_URL=http://localhost:3000
 # Direct connection to the database. Used for migrations.
 DATABASE_URL="postgresql://postgres.wdnniifioffggoxjtbzw:7wICatFBy4R2dMIO@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres?pgbouncer=true"
 DIRECT_URL="postgresql://postgres.wdnniifioffggoxjtbzw:7wICatFBy4R2dMIO@aws-0-ap-southeast-1.pooler.supabase.com:5432/postgres"
+
